# mnist-app

./: .gitignore  Makefile  README.md  docker-compose.yaml
fastapi/: Dockerfile  requirements.txt
fastapi/app/: config.py  main.py  predictor.py  stream_logger.py  util.py
fastapi/app/dao/: dao_utils.py  image_dao.py  model_dao.py  prediction_dao.py
fastapi/app/gateway/: image_gateway.py  model_gateway.py  prediction_gateway.py
fastapi/app/router/: model_router.py  prediction_router.py
fastapi/models/: default.onnx  v1.onnx
mysql/: README.md  dbdiagram.txt
mysql/docker-entrypoint-initdb.d/: init.sql
nginx/conf.d/: server.conf
nginx/html/: hand-writing-canvas.js  hand-writting-canvas.js  index.html  main.js  requester.js  requesters.js  style.css
nginx/html/onnx/: index.html  main.js  v1.onnx
pytorch/: .dockerignore  Dockerfile  docker-compose.override-gpu.yaml  docker-compose.yaml  lightning.py  main.py  pyproject.toml  requirements.txt
pytorch/src/: main.py
