[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchmetrics = "^0.6.0"
torch = "^1.10.0"
pytorch-lightning = "^1.5.0"
torchvision = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
